--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/wordpress/style.css",
+              "src/wordpress/theme.css"
             ],
             "scripts": []
           },
