feat: adiciona arquivo `settings.css` para estilos globais do WordPress e o integra ao projeto.

--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
             ],
             "styles": [
               "src/styles.scss",
+              "src/wordpress/settings.css",
               "src/wordpress/style.css",
               "src/wordpress/theme.css"
             ],
